<resources>
    <string name="app_name">Incagram</string>"
    <string name="nombre">Santiago Osuna</string>
    <string name="nomusuario">Santiago</string>
    <string name="apeusuario">Osuna Hidalgo</string>
    <string name="nombreApp">INCAGRAM</string>
    <string name="esloganApp">Inicia una nueva aventura con Incagram y descubre una nueva forma de ver el mundo</string>
    <string name="comienzabtn">Comienza</string>
    <string name="registrate">Regístrate</string>
    <string name="información">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario"> Usuario</string>
    <string name="contrase_a"> Contraseña</string>
    <string name="recupera">Recupera Tu Contraseña</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="instrucciones">Ingresa tus datos para crear una nueva cuenta</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo eléctronico</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="terminos">Términos y Condiciones</string>
    <string name="acepto">Acepto los</string>
    <string name="recuperarContra">Ingresa tu correo eléctrónico para recuperar tu contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="correoE">santiago@incagram.com</string>
    <string name="numero">1111111111</string>
    <string name="editar">Editar</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">mi perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="guardarcambios">Guardar cambios</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="apellido_usuario">Apellido del usuario</string>
    <string name="correo_ejemplo">correo@ejemplo.com</string>
    <string name="telefono_v">123456789</string>
</resources>