<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />

        <item
            android:id="@+id/menu_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />

        <item
            android:id="@+id/menu_configuracion"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuracion" />

        <item
            android:id="@+id/menu_cerrar_sesion"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesion" />
    </group>

</menu>
