<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@mipmap/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/tv_NomApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:text="@string/nombreApp"
                    android:textColor="@color/white"
                    android:textSize="38sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/información"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/et_oval"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/et_contraseña"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/et_oval"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/ingresar"
                android:textColor="@color/azulOsc"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_recupera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recupera"
                android:textAlignment="center"
                android:textColor="@color/azul"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="42dp"
                    android:src="@drawable/google"
                    android:contentDescription="@string/google_icon" />

                <Button
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/ingresa_con_google"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tienes_cuenta"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/registrate"
                    android:textColor="@color/azul"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
